--- a/logic.html
+++ b/logic.html
@@ -17,6 +17,10 @@
         document.write('a && b ==> ' + (c && d) + '<br>');
         document.write('a || b ==> ' + (c || d) + '<br>');
         document.write('!a ==> ' + (!c) + '<br>');
+
+
+        let big = (a > b) ? a : b;
+        document.write('big ==> ' + big + '<br>');
     </script>
 </head>
 <body>
